# pulseroute

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html
docs/assets/: styles.css
docs/assets/js/: feed.js  graph.js  icons.js  main.js  mapview.js  nlu.js  ops.js
docs/data/: stadium_graph.json
src/pulseroute/: __init__.py  cli.py  feed.py  graph.py  llm_agent.py  ops.py
tests/: test_graph.py  test_llm_agent.py  test_ops.py  test_web_parity.py
