[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseroute"
version = "1.0.0"
description = "Hybrid symbolic + GenAI stadium operations copilot for FIFA World Cup 2026 venues."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
pulseroute = "pulseroute.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RET", "ARG"]
ignore = [
  "E501",    # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally touch private helpers to pin down internal invariants.
"tests/*" = ["ARG001"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unreachable = true
# The GenAI layer is an optional extra; typeshed stubs are absent when it is not
# installed, and the whole point of that layer is that it degrades gracefully.
[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true
